# part2-dev

./: README.md
SeminalInputFeaturesDetection/: CMakeLists.txt  REPORT-ms1.md  REPORT-ms2.md  REPORT-ms3.md  report.md
SeminalInputFeaturesDetection/include/SeminalInputFeatures/: DefUseAnalysisPass.h  inputDetectionPass.h
SeminalInputFeaturesDetection/lib/SeminalInputFeatures/: DefUseAnalysisPass.cpp  InputDetectionPass.cpp
SeminalInputFeaturesDetection/tests/: InputDependentLoopTest.c  complex_branch_test.bc  complex_branch_test.c  function_pointer_test.c  hello.bc  hello.c  hello_direct  run_tests.sh  switch_test.c  test_example1.c  test_example2.c
